# VIO_Stereo_MSCKF

./: .gitignore  CMakeLists.txt  README.md  debugSim.sh  package.xml  remake.sh  runSim.sh  update_lib.sh
apps/: test_eskf_vio_backend.cpp  test_pnp.cpp  test_trianglate.cpp
config/: T_bc0.txt  T_bc1.txt  T_bc2.txt  gravity_in_w_init.txt  gravity_norm.txt  imu_bias_a_g_init.txt  imu_na_ng_nwa_nwg.txt
eskf_vio_backend/: CMakeLists.txt  remake_lib.sh
eskf_vio_backend/config/: T_bc1.txt  imu_bias_a_g_init.txt  imu_init_p_wb.txt  imu_init_q_wb.txt  imu_init_v_wb.txt  imu_na_ng_nwa_nwg.txt  keyframe_policy.txt  vision_measure_noise.txt
eskf_vio_backend/include/: backend.hpp
eskf_vio_backend/include/backend/: backend.hpp
eskf_vio_backend/include/config/: config.hpp
eskf_vio_backend/include/data_manager/: data_loader.hpp  data_typedef.hpp  feature_manager.hpp  frame_manager.hpp
eskf_vio_backend/include/data_manager/vision_data/: frame_manager.hpp
eskf_vio_backend/include/geometry/: perspective_n_point.hpp  trianglation.hpp
eskf_vio_backend/include/propagate/: attitude_estimate.hpp  imu_state.hpp  sequence_propagator.hpp
eskf_vio_backend/include/update/: gnss_update.hpp  multi_view_vision_update.hpp
eskf_vio_backend/include/utility/: log_api.hpp  math_lib.hpp  tick_tock.hpp  time_stamp_queue.hpp  typedef.hpp
eskf_vio_backend/src/: backend.cpp  backend_config.cpp
eskf_vio_backend/src/backend/: backend.cpp  backend_config.cpp  initialize.cpp
eskf_vio_backend/src/config/: config.cpp
eskf_vio_backend/src/data_manager/: data_loader.cpp  feature_manager.cpp  frame_manager.cpp
eskf_vio_backend/src/data_manager/vision_data/: frame_manager.cpp
eskf_vio_backend/src/geometry/: perspective_n_point.cpp  trianglation.cpp
eskf_vio_backend/src/propagate/: attitude_estimate.cpp  imu_state.cpp  sequence_propagator.cpp
eskf_vio_backend/src/update/: gnss_update.cpp  multi_view_vision_update.cpp
eskf_vio_backend/src/utility/: tick_tock.cpp
include/: backend.hpp
include/data_loader/: data_loader.hpp  data_typedef.hpp
include/data_manager/: data_loader.hpp  data_typedef.hpp  feature_manager.hpp  frame_manager.hpp
include/propagate/: attitude_estimate.hpp  imu_state.hpp  sequence_propagator.hpp
include/update/: gnss_update.hpp  multi_view_vision_update.hpp  perspective_n_point.hpp  trianglation.hpp
include/utility/: math_lib.hpp  typedef.hpp
saved_pose/: draw.py  estimated_poses.txt
simulate/: cam_pose.txt  imu_pose_noise.txt  simulation_config.yaml
simulate/longtime_scenes/: cam_pose.txt  imu_pose.txt  imu_pose_noise.txt
simulate/static_scenes/: cam_pose.txt  imu_pose.txt  imu_pose_noise.txt
src/: backend.cpp  backend.hpp  backend_config.cpp
src/data_loader/: data_loader.cpp  data_typedef.cpp
src/data_manager/: data_loader.cpp  data_typedef.cpp  feature_manager.cpp  frame_manager.cpp
src/geometry/: perspective_n_point.cpp  perspective_n_point.hpp  trianglation.cpp  trianglation.hpp
src/propagate/: attitude_estimate.cpp  imu_state.cpp  imu_state.hpp  sequence_propagator.cpp  sequence_propagator.hpp
src/update/: gnss_update.cpp  multi_view_vision_update.cpp  multi_view_vision_update.hpp  perspective_n_point.cpp  trianglation.cpp  update.cpp
src/utility/: log_api.hpp  typedef.hpp
test_log/: 20220917_test_data_loader_pop_msgs.txt  20220917_test_feature_frame_manager_add.txt  20220917_test_feature_frame_manager_move_newest_frame.txt  20220917_test_feature_frame_manager_move_oldest_frame.txt  20220917_test_feature_frame_manager_move_subnew_frame.txt  20220917_test_load_config_file.txt  20220918_test_imu_nominal_state_propagate.txt  20220925_get_imu_attitude_truth.txt  20220925_get_imu_attitude_truth_with_identity_atti_init.txt  20220925_get_imu_attitude_truth_with_zero_velocity_init.txt  20220925_test_imu_attitude_estimate.txt  20221006_msckf_init_and_expand_state_cov_size.txt  20221007_test_feature_manager_observe_num.txt  20221015_test_construct_measurement_function.txt  20221023_test_trianglize_in_initialization.txt  20221029_test_get_attitude_logic.txt  20221030_test_msckf_backend_in_dynamic_scene.txt  20221030_test_msckf_backend_in_static_scene.txt  atti.txt  atti_truth.txt  atti_truth_init_atti_tobe_1.txt  atti_truth_init_vel_tobe_0.txt  draw.py  pos.txt
